fix: adjust mobile layout and visibility for required hints in add task form

--- a/member/css/add-task-responsive.css
+++ b/member/css/add-task-responsive.css
@@ -71,6 +71,12 @@
   }
 }
 
+/* @media (min-width: 1000px) {
+  .add-task__required-hint--mobile {
+    display: none;
+  }
+} */
+
 @media (max-width: 1000px) {
   .add-task__priority-options {
     grid-template-columns: repeat(3, 1fr);
@@ -89,6 +95,12 @@
     width: 90%;
     border: 1px solid #e0e0e0;
   }
+
+  .add-task__required-hint--mobile {
+    display: block;
+    margin-top: -20px;
+    line-height: 1.2;
+  }
 }
 
 @media (max-width: 820px) {
@@ -100,6 +112,16 @@
     left: 0;
     width: 100%;
     padding: 24px 16px 90px 16px;
+  }
+
+  .add-task__required-hint {
+    display:none;
+  }
+
+  .add-task__required-hint--mobile {
+    display: block;
+    margin-top: -20px;
+    line-height: 1.2;
   }
 
   .button.add-task__priority-button {
@@ -116,16 +138,12 @@
     align-items: center;
     position: fixed;
     bottom: 82px;
+    right: 22px;
     background-color: var(--background__primary);
     width: 100%;
   }
 }
 
-@media (min-width: 736px) {
-  .add-task__required-hint--mobile {
-    display: none;
-  }
-}
 
 @media(max-width: 735px) {
   .add-task__footer .add-task__required-hint {
@@ -183,7 +201,7 @@
   }
 
   .button.add-task__button {
-    padding: 0;
+    padding: 0 20px;
   }
 
   .add-task__required-hint {
@@ -199,11 +217,11 @@
   }
 
   .add-task__footer {
-    flex-direction: column;
-    justify-content: center;
+    display: flex;
+    justify-content: flex-end;
     position: fixed;
     bottom: 80px;
-    right: 12px;
+    right: 22px;
   }
 }
 
