--- a/styles/assets.css
+++ b/styles/assets.css
@@ -7,6 +7,10 @@
   border-radius: 8px;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 .button__index--signup {
   width: 90px;
   height: 50px;
